# PyMarch

./: .gitignore  pyproject.toml
pymarch/: __main__.py  application.py  march.py  render_target.py  shader.py
pymarch/SDFs/: marchstruct.py  sphere.py
pymarch/shaders/: quad_render_vs.glsl  ray_march_cs.glsl  ray_march_fs.glsl
